<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/preferences">
    <fr.geobert.radis.tools.ValidatedEditTextPreference
            android:dialogTitle="@string/prefs_insertion_date_title"
            android:positiveButtonText="@string/ok"
            android:negativeButtonText="@string/cancel"
            android:title="@string/prefs_insertion_date_label"
            android:key="insertion_date"
            android:summary="@string/prefs_insertion_date_text"
            android:inputType="number"
            android:persistent="true"/>
    <ListPreference
            android:key="quickadd_account"
            android:title="@string/quickadd_account"/>
    <CheckBoxPreference
            android:key="hide_ops_quick_add"
            android:title="@string/hide_ops_quick_add"
            android:summary="@string/hide_ops_quick_add_details"/>
    <CheckBoxPreference
            android:key="use_weighted_infos"
            android:title="@string/use_weighted_infos"
            android:summary="@string/use_weighted_infos_details"
            android:defaultValue="true"/>
    <CheckBoxPreference
            android:key="invert_completion_in_quick_add"
            android:title="@string/invert_completion_in_quick_add"
            android:summary="@string/invert_completion_in_quick_add_details"
            android:defaultValue="true"/>
</PreferenceScreen>
