<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:title="@string/advanced"
            android:id="@+id/advanced"
            android:icon="@drawable/params_48">
        <menu>
            <item
                    android:id="@+id/backup"
                    android:title="@string/backup_db"/>
            <item
                    android:id="@+id/restore"
                    android:title="@string/restore_db"/>
            <item
                    android:id="@+id/process_scheduling"
                    android:title="@string/process_scheduled_transactions"/>
            <item
                    android:id="@+id/recompute_account"
                    android:title="@string/recompute_account_sums"/>
        </menu>
    </item>
    <item
            android:id="@+id/go_to_preferences"
            android:icon="@drawable/params_48"
            android:title="@string/preferences"/>
</menu>
