<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:orientation="horizontal"
	android:layout_height="wrap_content">
	<TextView android:padding="3dip" android:layout_width="wrap_content" android:minWidth="40sp"
		android:layout_height="wrap_content" android:id="@+id/TextView01"
		android:text="@string/date"></TextView>
	<TextView android:padding="3dip" android:layout_width="fill_parent"
		android:layout_weight="1" android:layout_height="wrap_content"
		android:id="@+id/TextView02" android:text="@string/third_party"></TextView>
	<TextView android:padding="3dip" android:layout_width="wrap_content"
		android:layout_weight="0" android:layout_height="wrap_content" android:minWidth="60sp"
		android:id="@+id/TextView03" android:text="@string/debit" android:gravity="right"></TextView>
	<TextView android:padding="3dip" android:layout_width="wrap_content" android:minWidth="60sp"
		android:layout_weight="0" android:layout_height="wrap_content" android:gravity="right"
		android:id="@+id/TextView04" android:text="@string/credit"></TextView>
</LinearLayout>
