<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<Button android:id="@+id/create_info" android:text="@string/create"
			style="@style/FormButton" />
		<Button android:id="@+id/del_info" android:text="@string/delete"
			style="@style/FormButton" />
		<Button android:id="@+id/edit_info" android:text="@string/edit"
			style="@style/FormButton" />
	</LinearLayout>
	<ScrollView android:layout_width="fill_parent" android:layout_weight="1"
		android:layout_height="fill_parent">
		<ListView android:id="@+id/infos_list" android:layout_width="fill_parent"
			android:layout_height="fill_parent" >
		</ListView>
	</ScrollView>
</LinearLayout>
