<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_op_root"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <DatePicker
        android:id="@+id/edit_op_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:paddingBottom="0dp"
        android:paddingTop="0dp" />

    <LinearLayout style="@style/EditorHorizontalLinearLayout" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/transfert" />

        <CheckBox
            android:id="@+id/is_transfert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/transfert_cont"
        style="@style/EditorHorizontalLinearLayout" >

        <Spinner
            android:id="@+id/trans_src_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text="@string/rarr"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/trans_dst_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/third_party_cont"
        style="@style/EditorHorizontalLinearLayout" >

        <fr.geobert.radis.tools.MyAutoCompleteTextView
            android:id="@+id/edit_op_third_party"
            style="@style/EditorEditText"
            android:completionThreshold="1"
            android:hint="@string/third_party" />

        <ImageButton
            android:id="@+id/edit_op_third_parties_list"
            style="@style/EditorImageButton"
            android:src="@drawable/more36" />
    </LinearLayout>

    <LinearLayout style="@style/EditorHorizontalLinearLayout" >

        <EditText
            android:id="@+id/edit_op_sum"
            style="@style/EditorEditText.Sum"
            android:hint="@string/sum" />

        <ImageButton
            android:id="@+id/edit_op_sign"
            style="@style/EditorImageButton"
            android:src="@drawable/plus_moins" />
    </LinearLayout>

    <LinearLayout style="@style/EditorHorizontalLinearLayout" >

        <fr.geobert.radis.tools.MyAutoCompleteTextView
            android:id="@+id/edit_op_tag"
            style="@style/EditorEditText"
            android:completionThreshold="1"
            android:hint="@string/tag" />

        <ImageButton
            android:id="@+id/edit_op_tags_list"
            style="@style/EditorImageButton"
            android:src="@drawable/more36" />
    </LinearLayout>

    <LinearLayout style="@style/EditorHorizontalLinearLayout" >

        <fr.geobert.radis.tools.MyAutoCompleteTextView
            android:id="@+id/edit_op_mode"
            style="@style/EditorEditText"
            android:completionThreshold="1"
            android:hint="@string/mode" />

        <ImageButton
            android:id="@+id/edit_op_modes_list"
            android:src="@drawable/more36"
            style="@style/EditorImageButton" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_op_notes"
        style="@style/DescEditText"
        android:hint="@string/notes"
        android:lines="2" />

</LinearLayout>