<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_scheduling_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/GoToBasicsBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_menu_arrow_r2l_mdpi"
        android:text="@string/basics" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/account" />

        <Spinner
            android:id="@+id/account_choice"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:prompt="@string/account" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/periodicity" />

        <Spinner
            android:id="@+id/periodicity_choice"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/custom_periodicity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/custom_periodicity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/every" />

        <EditText
            android:id="@+id/custom_periodicity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number|numberSigned|numberDecimal"
            android:minEms="2" />

        <Spinner
            android:id="@+id/custom_periodicity_choice"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/end_date_check"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_date" />

    <DatePicker
        android:id="@+id/edit_end_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:calendarViewShown="false" />

</LinearLayout>