<?xml version="1.0" encoding="utf-8"?>
<android.gesture.GestureOverlayView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:id="@+id/gesture_view"
	android:gestureStrokeType="single" android:eventsInterceptionEnabled="true"
	android:layout_weight="1.0">
	<LinearLayout android:padding="5px" android:layout_width="fill_parent"
		xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/scheduled_op_editor"
		android:layout_height="fill_parent" android:orientation="vertical">
		<ScrollView android:layout_width="fill_parent" android:id="@+id/flipper_scrollview"
			android:layout_height="fill_parent" android:layout_weight="1"
			android:fillViewport="true">
			<ViewFlipper android:id="@+id/flipper"
				android:layout_width="fill_parent" android:layout_height="fill_parent">
				<LinearLayout android:padding="0px"
					android:layout_width="fill_parent" android:layout_height="fill_parent"
					android:orientation="vertical">
					<include layout="@layout/main_op_edit" />
					<LinearLayout android:padding="0px"
						android:layout_width="fill_parent" android:layout_height="fill_parent"
						android:orientation="vertical" android:layout_gravity="fill_vertical"
						android:gravity="bottom">
						<Button android:id="@+id/GoToSchedulingBtn"
							android:drawableRight="@drawable/ic_menu_arrow_l2r_mdpi"
							android:layout_width="fill_parent" android:layout_height="wrap_content"
							android:text="@string/scheduling" android:layout_weight="0" />
					</LinearLayout>
				</LinearLayout>
				<LinearLayout android:padding="0px"
					android:layout_width="fill_parent" android:layout_height="fill_parent"
					android:layout_gravity="fill_vertical" android:orientation="vertical">
					<include layout="@layout/scheduling_edit" />
				</LinearLayout>
			</ViewFlipper>
		</ScrollView>
		<LinearLayout style="@style/EditorHorizontalLinearLayout.FormButton"
			android:layout_weight="0">
			<Button android:id="@+id/confirm_op" android:text="@string/ok"
				android:layout_weight="1" android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
			<Button android:id="@+id/cancel_op" android:text="@string/cancel"
				android:layout_weight="1" android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
		</LinearLayout>
	</LinearLayout>
</android.gesture.GestureOverlayView>